掲示板実装

--- a/app/assets/stylesheets/boards.scss
+++ b/app/assets/stylesheets/boards.scss
@@ -1,3 +1,23 @@
 // Place all the styles related to the boards controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.boards__table {
+  tr:hover {
+    cursor: pointer;
+  }
+}
+
+.boards__linkBox {
+  a {
+    margin: 0 8px;
+  }
+}
+
+.boards__searchForm {
+  display: inline-block;
+}
+
+.boards__select {
+  display: inline-block;
+  width: auto;
+}
