--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -7,14 +7,13 @@
 
 <% if flash[:notice] %>
   <div class="alert alert-primary"><%= flash[:notice] %></div>
-<% end %>  
+<% end %>
 
-<div class="card">
-  <div class="card-header">
-    <h4><%= @board.title %></h4>
-  </div>
-  <div class="card-body">
-    <p class="card-text"><%= simple_format(@board.body) %></p>
-    <p class="text-right font-weight-bold mr-10"><%= @board.name %></p>
-  </div>
+<%= render @board %>
+
+<div class="p-comment__list">
+  <div class="p-comment__listTitle">コメント</div>
+  <%= render @board.comments %>
 </div>
+
+<%= render partial: 'comments/form', locals: { comment: @comment } %>
