--- a/app/assets/stylesheets/costom.scss
+++ b/app/assets/stylesheets/costom.scss
@@ -1,8 +1,6 @@
 // Custom bootstrap variables must be set or imported *before* bootstrap.
 @import "bootstrap";
+@import "comments";
 
 
-.container {
-  text-align: center;
-}
 
