--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -1,12 +1,24 @@
 <div class="d-flex align-items-center">
-  <h1>掲示板一覧</h1>
+  <h1>お悩み相談掲示板一覧</h1>
   <div class="ml-auto boards__linkBox">
-    <%= link_to '新規作成', new_board_path, class: 'btn btn-outline-dark' %>
+    <%= form_tag boards_path, method: :get, class: 'boards_searchForm' do %>
+      <%= select_tag :tag_id,
+                     options_from_collection_for_select(Tag.all, :id, :name, params[:tag_id]),
+                     {
+                       prompt: 'タグで絞込み',
+                       class: 'form-control boards_select',
+                       onchange: 'submit(this.form);'
+                     }
+      %>
+    <% end %>  
+    <a href="/boards/new" class="btn btn-outline-dark">新規作成</a>
   </div>
 </div>
+
 <% if flash[:notice] %>
   <div class="alert alert-danger"><%= flash[:notice] %></div>
 <% end %>
+
 <table class="table table-hover boards__table">
   <thead class="thead-dark">
     <tr>
@@ -31,7 +43,7 @@
         <td><%= link_to '削除', board, class: 'btn btn-outline-dark', method: :delete %></td>
       </tr>
     <% end %>
-  </tbody>  
-</table>  
+  </tbody>
+</table>
 
 <%= paginate @boards %>
