--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,3 +1,24 @@
 // Place all the styles related to the posts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.p-comment__listTitle {
+  border-bottom: 2px solid #dfdfdf;
+  padding-bottom: 5px;
+}
+
+.p-comment__list {
+  margin: 38px 0;
+  padding: 20px;
+}
+
+.p-comment__item {
+  padding: 18px;
+  border-bottom: 2px dotted #dfdfdf;
+  width: 250px;
+}
+
+.p-comment__bottomLine {
+  font-size: 15px;
+  text-align: right;
+}
+ 
