--- a/app/views/posts/create.html.erb
+++ b/app/views/posts/create.html.erb
@@ -1,6 +1,3 @@
-<h1>Posts#create</h1>
-<p>Find me in app/views/posts/create.html.erb</p>
-<% if flash[:notice] %>
-  <div class="alert alert-primary"><%= flash[:notice] %></div>
-<% end %>
+<h1>うんちは元気のバロメーター</h1>
+
 
