--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,12 @@
  *= require_tree .
  *= require_self
  */
+ .post-box {
+  float: left;
+  padding-top: 100px;
+}
+
+.post-list {
+  float: right;
+  padding-right: 100px;
+}
