--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -13,8 +13,8 @@
 
 .p-comment__item {
   padding: 18px;
-  border-bottom: 2px dotted #dfdfdf;
-  width: 250px;
+  border: 2px dotted #81BEF7;
+  width: 500px;
 }
 
 .p-comment__bottomLine {
