--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,9 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<div class="main">
+<h1 class="home">メディワン</h1>
+<%= image_tag("top-mediwan.png") %>
+<p>ようこそメディワンへ</p>
+<p>メディワンは、ワンちゃんの健康の為のwebサービスです。</p>
+<p>ワンちゃんの毎日のうんちの記録をボタンひとつで管理することができます。</p>
+<p>また、他のユーザーにワンちゃんのことについて相談することができる掲示板を用意しました。</p>
+<p>是非このサービスを利用して、楽しく健康的なワンちゃんとのLIFEを楽しみましょう</p>
+</div>
