--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -28,6 +28,7 @@
       <th>相談者</th>
       <th>作成日時</th>
       <th>更新日時</th>
+      <th>いいね</th>
       <th></th>
       <th></th>
     </tr>
@@ -40,6 +41,11 @@
         <td><%= board.name %></td>
         <td><%= board.created_at.to_s(:datetime_jp) %></td>
         <td><%= board.updated_at.to_s(:datetime_jp) %></td>
+        <td>
+           <span id="likes_buttons_<%= board.id %>">
+              <%= render partial: 'likes/like', locals: { board: board, likes: @likes} %>
+           </span>
+        </td>
         <td><%= link_to '詳細', board, class: 'btn btn-outline-dark' %></td>
         <td><%= link_to '削除', board, class: 'btn btn-outline-dark', method: :delete %></td>
        
